2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Use the right color for tasks and appointments.
	Patch by Sjoerd Simons <sjoerd@luon.net>
	Fix bug #503581

	* calendar-client.c: (get_source_color): use e_source_peek_color_spec()
	instead of deprecated e_source_get_color()
	* calendar-window.c: (set_renderer_pixbuf_color_by_column): use
	gdk_color_parse()

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Fix compiler warnings. Patch by Kjartan Maraas <kmaraas@gnome.org>.
	Part of bug #521409.

	* calendar-client.c: (calendar_client_select_month), (filter_task),
	(calendar_client_foreach_appointment_day):
	* calendar-window.c: (set_renderer_pixbuf_pixmap_for_bday):
	* clock-face.c:
	* clock-map.c: (clock_map_update_time):
	* clock.c: (applet_change_orient), (loc_to_string):
	* gnome-clock-applet-mechanism-main.c: (get_system_bus), (main):
	* gnome-clock-applet-mechanism.c:
	(gnome_clock_applet_mechanism_constructor),
	(_check_polkit_for_action):
	* set-timezone.c: (can_do):

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Load calendars asynchronously. Fix bug #515948, and probably a few
	others. Based on patch by Chenthill Palanisamy <pchenthill@novell.com>

	* calendar-client.c: (calendar_client_set_timezone): always set the
	timezone, even if the calendar is not loaded yet
	(cal_opened_cb): new, callback when a calendar has been opened. We just
	update the appointments/tasks when relevant.
	(load_calendars): new, asynchronously open all calendars from a source
	(calendar_client_init): move some stuff around, and call
	load_calendars()
	(calendar_client_update_appointments): ignore not-loaded calendars
	(calendar_client_update_tasks): ditto
	(calendar_client_source_finalize): disconnect the opened handler
	(calendar_client_appointment_sources_changed): call load_calendars()
	since there have been changes in the list of calendars
	(calendar_client_task_sources_changed): ditto
	* calendar-sources.c: (get_ecal_from_source): renamed from