@@ -1,5 +1,11 @@
 2008-06-30  Vincent Untz  <vuntz@gnome.org>
 
+	* calendar-client.c: (get_ical_rid): don't strdup the value returned by
+	icaltime_as_ical_string, we already own it (see bug #516408)
+	(calendar_appointment_finalize): fix leak
+
+2008-06-30  Vincent Untz  <vuntz@gnome.org>
+
 	Use the right color for tasks and appointments.
 	Patch by Sjoerd Simons <sjoerd@luon.net>
 	Fix bug #503581
